--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
-        "core-js": "3.5.0",
+        "core-js": "^3.26.1",
         "dns": "^0.2.2",
         "express": "^4.18.1",
         "mariadb": "^3.0.1",
@@ -45,6 +45,6 @@
         "prettier": "1.19.1",
         "sass": "1.23.7",
         "sass-loader": "8.0.0",
-        "vue-template-compiler": "2.6.10"
+        "vue-template-compiler": "^2.6.10"
     }
 }
